# smoo

./: .packit.yaml  AGENTS.md  APKBUILD  ARCH_RECONCILER.md  Cargo.toml  HACKING.md  README.md  justfile  smoo.spec
.cargo/: config.toml
.github/workflows/: alpine-arm64.yml  alpine-armv7.yml  alpine.yml  build.yml  copr-crates.yml  integration-spike.yml  integration-tests.yml  issue-bump.yml  next-rc-on-merge.yml  release.yml  vm-image.yml
apps/smoo-gadget-cli/: Cargo.toml
apps/smoo-gadget-cli/src/: main.rs  state.rs
apps/smoo-host-cli/: Cargo.toml
apps/smoo-host-cli/src/: main.rs
copr/: .gitignore  README.md
copr/rust-dma-heap/: dma-heap-fix-metadata.diff  rust-dma-heap.spec  rust2rpm.toml
copr/rust-is_terminal_polyfill/: rust-is_terminal_polyfill.spec
crates/smoo-buffers/: Cargo.toml  README.md
crates/smoo-buffers/src/: lib.rs
crates/smoo-gadget-app/: Cargo.toml
crates/smoo-gadget-app/src/: lib.rs
crates/smoo-gadget-buffers/: Cargo.toml  README.md
crates/smoo-gadget-buffers/src/: lib.rs
crates/smoo-gadget-core/: Cargo.toml  README.md
crates/smoo-gadget-core/src/: controllers.rs  dma.rs  lib.rs  link.rs  metrics.rs  pump.rs  runtime.rs  state.rs  state_store.rs
crates/smoo-gadget-core/src/pump/: mod.rs  registry.rs  state.rs
crates/smoo-gadget-ublk/: Cargo.toml  README.md  build.rs
crates/smoo-gadget-ublk/examples/: ublk.rs
crates/smoo-gadget-ublk/src/: buffers.rs  lib.rs  sys.rs
crates/smoo-host-app/: Cargo.toml
crates/smoo-host-app/src/: lib.rs
crates/smoo-host-blocksource-cached/: Cargo.toml
crates/smoo-host-blocksource-cached/src/: lib.rs
crates/smoo-host-blocksource-gibblox/: Cargo.toml
crates/smoo-host-blocksource-gibblox/src/: lib.rs
crates/smoo-host-blocksource-http/: Cargo.toml
crates/smoo-host-blocksource-http/src/: lib.rs  native.rs  wasm.rs
crates/smoo-host-blocksources/: Cargo.toml
crates/smoo-host-blocksources/src/: device.rs  file.rs  lib.rs  random.rs
crates/smoo-host-cache-store-idb/: Cargo.toml
crates/smoo-host-cache-store-idb/src/: lib.rs  wasm.rs
crates/smoo-host-core/: Cargo.toml  README.md
crates/smoo-host-core/src/: block.rs  channel.rs  control.rs  export_id.rs  exports.rs  heartbeat.rs  host.rs  lib.rs  metrics.rs  pump.rs  transport.rs
crates/smoo-host-rusb/: Cargo.toml
crates/smoo-host-rusb/src/: lib.rs
crates/smoo-host-session/: Cargo.toml
crates/smoo-host-session/src/: lib.rs
crates/smoo-host-transport-nusb/: Cargo.toml
crates/smoo-host-transport-nusb/src/: lib.rs
crates/smoo-host-transport-rusb/: Cargo.toml
crates/smoo-host-transport-rusb/src/: lib.rs
crates/smoo-host-transport-webusb/: Cargo.toml
crates/smoo-host-transport-webusb/src/: lib.rs  unsupported.rs  wasm.rs
crates/smoo-host-web-worker/: Cargo.toml
crates/smoo-host-web-worker/src/: api.rs  lib.rs  rpc.rs  runner.rs
crates/smoo-host-webusb/: Cargo.toml
crates/smoo-host-webusb/src/: lib.rs  unsupported.rs  webusb.rs
crates/smoo-proto/: Cargo.toml  LICENSE-MIT
crates/smoo-proto/src/: lib.rs
crates/smoo-purrfection/: Cargo.toml
crates/smoo-purrfection/src/: dir.rs  fat.rs  geometry.rs  lib.rs  provider.rs
crates/smoo-purrfection/tests/: virtual_device.rs
crates/smoo-test-harness/: Cargo.toml
crates/smoo-test-harness/src/: artifacts.rs  capture.rs  configfs.rs  dummy_hcd.rs  fixture.rs  lib.rs  process.rs  scenario.rs
crates/smoo-test-harness/src/verify/: block_pattern.rs  mod.rs  pcap.rs
crates/smoo-test-harness/tests/: link_replay.rs  max_io_read.rs  pipelined_io.rs  rw_modest.rs  shutdown_host_loss.rs  smoke.rs  user_recovery_handover.rs
crates/smoo-test-harness/tests/common/: mod.rs
crates/smoo-ublk/: Cargo.toml  README.md  build.rs
crates/smoo-ublk/examples/: ublk.rs
crates/smoo-ublk/src/: lib.rs
debian/: changelog  control  copyright  rules
docs/: DISSECTOR.md  DRACUT.md  PROTOCOL.md
docs/plans/: fedora-packaging.md
dracut/modules.d/90smoo/: 60-smoo-root.rules  module-setup.sh  parse-smoo.sh  smoo-gadget-initrd-start.sh  smoo-gadget-initrd-stop.sh  smoo-root-storage.service
examples/blocksourced-ublk/: Cargo.toml  README.md
examples/blocksourced-ublk/src/: main.rs
examples/web-host/: Cargo.toml  README.md  index.html
examples/web-host/src/: lib.rs
gadget/: Cargo.toml
gadget/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
packaging/selinux/: smoo_gadget.fc  smoo_gadget.te
tools/udev/: 99-smoo-kvm.rules
tools/vm-image/: guest-setup.sh
tools/wireshark/: README.md  smoo.lua
xtask/: Cargo.toml
xtask/src/: main.rs  release.rs  vm.rs
