[workspace]
resolver = "2"
members = ["apps/*", "crates/*", "examples/*"]

[workspace.package]
version = "0.0.1"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
tokio = "1.48.0"
tokio-util = "0.7.17"
url = "2.5.4"
libc = "0.2.177"
hyper = "0.14"
