[workspace]
resolver = "2"
members = ["apps/*", "crates/*", "examples/*"]

[workspace.package]
version = "0.0.2-rc.2"
rust-version = "1.88"
repository = "https://github.com/samcday/smoo"
description = "Reverse USB Mass Storage"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
tokio = "1.48.0"
tokio-util = "0.7.17"
url = "2.5.4"
libc = "0.2.177"
hyper = "0.14"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
serde = "1.0.228"
usb-gadget = "0.7.6"
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"

smoo-gadget-app = { path = "crates/smoo-gadget-app", version = "0.0.2-rc.2" }
smoo-gadget-core = { path = "crates/smoo-gadget-core", version = "0.0.2-rc.2" }
smoo-gadget-ublk = { path = "crates/smoo-gadget-ublk", version = "0.0.2-rc.2" }
smoo-host-blocksource-gibblox = { path = "crates/smoo-host-blocksource-gibblox", version = "0.0.2-rc.2" }
smoo-host-blocksource-http = { path = "crates/smoo-host-blocksource-http", version = "0.0.2-rc.2" }
smoo-host-blocksources = { path = "crates/smoo-host-blocksources", version = "0.0.2-rc.2" }
smoo-host-core = { path = "crates/smoo-host-core", version = "0.0.2-rc.2" }
smoo-host-session = { path = "crates/smoo-host-session", version = "0.0.2-rc.2" }
smoo-host-transport-rusb = { path = "crates/smoo-host-transport-rusb", version = "0.0.2-rc.2" }
smoo-host-webusb = { path = "crates/smoo-host-webusb", version = "0.0.2-rc.2" }
smoo-proto = { path = "crates/smoo-proto", version = "0.0.2-rc.2" }
