[package]
name = "smoo_gadget"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
usb-gadget = { version = "0.7.5", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
bytes = "1.10.1"
libublk = "0.3.5"
byteorder = "1.5.0"
libc = "0.2.172"
async-channel = "2.3.1"
