[package]
name = "smoo-gadget-cli"
version = { workspace = true }
edition = "2021"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[features]
default = []
apkbuild = ["smoo-gadget-app/apkbuild"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
smoo-gadget-app = { path = "../../crates/smoo-gadget-app" }
