[package]
name = "smoo-gadget-cli"
version = { workspace = true }
edition = "2021"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[features]
default = []
apkbuild = ["smoo-gadget-app/apkbuild"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
smoo-gadget-app = { path = "../../crates/smoo-gadget-app" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
