[package]
name = "smoo-host-cli"
version = { workspace = true }
edition = "2021"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
smoo-host-blocksource-http = { path = "../../crates/smoo-host-blocksource-http" }
smoo-host-blocksources = { path = "../../crates/smoo-host-blocksources" }
smoo-host-core = { path = "../../crates/smoo-host-core", features = ["metrics"] }
smoo-host-session = { path = "../../crates/smoo-host-session" }
smoo-host-transport-rusb = { path = "../../crates/smoo-host-transport-rusb" }
smoo-proto = { path = "../../crates/smoo-proto" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { workspace = true }
