[package]
name = "smoo-host-cli"
version = { workspace = true }
edition = "2021"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = "Host CLI for serving smoo block exports over USB."
autobins = false

[[bin]]
name = "smoo-host"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-unknown-linux-musl.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-aarch64-unknown-linux-musl.tar.gz"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
smoo-host-blocksource-http = { workspace = true }
smoo-host-blocksources = { workspace = true }
smoo-host-core = { workspace = true, features = ["metrics"] }
smoo-host-session = { workspace = true }
smoo-host-transport-rusb = { workspace = true }
smoo-proto = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { workspace = true }
