[package]
name = "smoo-gadget-app"
version = { workspace = true }
edition = "2021"
rust-version = "1.87"
license = "GPL-3.0-only"

[features]
default = []
apkbuild = ["smoo-gadget-core/apkbuild"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
smoo-gadget-core = { path = "../smoo-gadget-core", features = ["metrics"] }
smoo-proto = { path = "../smoo-proto" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
usb-gadget = { version = "0.7.6", features = ["tokio"] }
libc = "0.2.177"
async-trait = { workspace = true }
futures = "0.3.31"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { version = "0.13", default-features = false, features = ["http-listener"] }
tokio-util = { workspace = true }
