[package]
name = "smoo-gadget-app"
version = { workspace = true }
edition = "2021"
rust-version = "1.87"
license = "GPL-3.0-only"
repository = "https://github.com/samcday/smoo"
description = "Components for the smoo USB block device stack"

[features]
default = []
apkbuild = ["smoo-gadget-core/apkbuild"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
smoo-gadget-core = { path = "../smoo-gadget-core", version = "0.0.1-rc.1", features = ["metrics"] }
smoo-proto = { path = "../smoo-proto", version = "0.0.1-rc.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
usb-gadget = { workspace = true, features = ["tokio"] }
libc = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.31"
hyper = { workspace = true, features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
tokio-util = { workspace = true }
