[package]
name = "smoo-gadget-app"
version = { workspace = true }
edition = "2021"
rust-version = "1.87"
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[features]
default = []
apkbuild = ["smoo-gadget-core/apkbuild"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
smoo-gadget-core = { workspace = true, features = ["metrics"] }
smoo-proto = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
gadgetry-most-foul = { workspace = true, features = ["tokio"] }
libc = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.31"
hyper = { workspace = true, features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
tokio-util = { workspace = true }
