[package]
name = "smoo-gadget-core"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[features]
default = []
apkbuild = ["smoo-gadget-ublk/apkbuild"]
metrics = ["dep:metrics"]

[dependencies]
anyhow = { workspace = true }
bitflags = { version = "2.6.0", features = ["serde"] }
dma-heap = "0.4.1"
libc = { workspace = true }
mmap = "0.1.1"
nix = { version = "0.30.1", features = ["ioctl", "poll"] }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
smoo-proto = { path = "../smoo-proto" }
smoo-gadget-ublk = { path = "../smoo-gadget-ublk" }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
tracing = "0.1.41"
async-trait = { workspace = true }
usb-gadget = { version = "0.7.6", features = ["tokio"] }
metrics = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.14.0"
