[package]
name = "smoo-gadget-core"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[features]
default = []
apkbuild = ["smoo-gadget-ublk/apkbuild"]
metrics = ["dep:metrics"]

[dependencies]
anyhow = { workspace = true }
bitflags = { version = "2.6.0", features = ["serde"] }
dma-heap = "0.4.1"
libc = { workspace = true }
mmap = "0.1.1"
nix = { version = "0.30.1", features = ["ioctl", "poll"] }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
smoo-proto = { workspace = true }
smoo-gadget-ublk = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "sync"] }
tracing = "0.1.41"
async-trait = { workspace = true }
gadgetry-most-foul = { workspace = true }
metrics = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.14.0"
