[package]
name = "smoo-host-app"
version = { workspace = true }
edition = "2021"
rust-version = "1.87"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.20", features = ["derive"] }
smoo-host-blocksources = { path = "../smoo-host-blocksources" }
smoo-host-blocksource-http = { path = "../smoo-host-blocksource-http" }
smoo-host-blocksource-cached = { path = "../smoo-host-blocksource-cached", features = ["std"] }
smoo-host-core = { path = "../smoo-host-core", features = ["metrics"] }
smoo-host-transport-rusb = { path = "../smoo-host-transport-rusb" }
smoo-proto = { path = "../smoo-proto" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.4"
tokio-util = "0.7.17"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
metrics-exporter-prometheus = { version = "0.13", default-features = false, features = ["http-listener"] }
