[package]
name = "smoo-host-blocksource-cached"
version = { workspace = true }
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"

[features]
default = []
std = []

[dependencies]
async-trait = "0.1.89"
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
smoo-host-core = { path = "../smoo-host-core", default-features = false }
