[package]
name = "smoo-host-blocksource-gibblox"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
async-trait = { workspace = true }
gibblox-core = { version = "=0.0.1-rc.8" }
smoo-host-core = { path = "../smoo-host-core", version = "0.0.1-rc.1" }
