[package]
name = "smoo-host-blocksources"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
libc = "0.2.176"
smoo-host-core = { path = "../smoo-host-core" }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1.41"
