[package]
name = "smoo-host-blocksources"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
smoo-host-core = { path = "../smoo-host-core" }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1.41"
