[package]
name = "smoo-host-blocksources"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
smoo-host-core = { path = "../smoo-host-core", version = "0.0.1-rc.1" }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1.41"
