[package]
name = "smoo-host-cache-store-idb"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[features]
default = ["std"]
std = []

[dependencies]
async-trait = "0.1.89"
smoo-host-blocksource-cached = { path = "../smoo-host-blocksource-cached" }
smoo-host-core = { path = "../smoo-host-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", default-features = false, features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbVersionChangeEvent",
    "DomException",
] }
