[package]
name = "smoo-host-core"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[features]
default = []
metrics = []

[dependencies]
async-trait = "0.1.89"
smoo-proto = { path = "../smoo-proto" }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
