[package]
name = "smoo-host-rusb"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"

[dependencies]
async-trait = "0.1.89"
rusb = "0.9.4"
smoo-host-core = { path = "../smoo-host-core" }
smoo-proto = { path = "../smoo-proto" }
tokio = { version = "1.48.0", features = ["rt"] }
tracing = "0.1.41"
