[package]
name = "smoo-host-transport-rusb"
version = { workspace = true }
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"

[dependencies]
async-trait = "0.1.89"
crossbeam-channel = "0.5.13"
rusb = "0.9.4"
smoo-host-core = { path = "../smoo-host-core" }
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tracing = "0.1.41"
