[package]
name = "smoo-host-transport-rusb"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
async-trait = { workspace = true }
crossbeam-channel = "0.5.13"
rusb = "0.9.4"
smoo-host-core = { path = "../smoo-host-core", version = "0.0.1-rc.1" }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = "0.1.41"
