[package]
name = "smoo-host-web-worker"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
futures-channel = "0.3.31"
futures-util = { workspace = true, features = ["alloc", "async-await", "async-await-macro"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gibblox-blockreader-messageport = { version = ">=0.0.1-rc.8" }
gibblox-core = { version = ">=0.0.1-rc.8" }
smoo-host-blocksource-gibblox = { path = "../smoo-host-blocksource-gibblox", version = "0.0.1-rc.1" }
smoo-host-core = { path = "../smoo-host-core", version = "0.0.1-rc.1" }
smoo-host-session = { path = "../smoo-host-session", version = "0.0.1-rc.1" }
smoo-host-webusb = { path = "../smoo-host-webusb", version = "0.0.1-rc.1" }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "DedicatedWorkerGlobalScope",
    "Document",
    "Event",
    "HtmlCollection",
    "HtmlScriptElement",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "Navigator",
    "Usb",
    "UsbDevice",
    "Window",
    "Worker",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType",
] }
