[package]
name = "smoo-host-web-worker"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
futures-channel = "0.3.31"
futures-util = { workspace = true, features = ["alloc", "async-await", "async-await-macro"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gibblox-blockreader-messageport = { version = ">=0.0.2-rc, <0.1.0-0" }
gibblox-core = { version = ">=0.0.2-rc, <0.1.0-0" }
smoo-host-blocksource-gibblox = { workspace = true }
smoo-host-core = { workspace = true }
smoo-host-session = { workspace = true }
smoo-host-webusb = { workspace = true }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "DedicatedWorkerGlobalScope",
    "Document",
    "Event",
    "HtmlCollection",
    "HtmlScriptElement",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "Navigator",
    "Usb",
    "UsbDevice",
    "Window",
    "Worker",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType",
] }
