[package]
name = "smoo-host-webusb"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = { workspace = true }

[dependencies]
async-trait = { workspace = true }
smoo-host-core = { path = "../smoo-host-core", version = "0.0.1-rc.1" }
futures-util = { workspace = true, features = ["std"] }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Usb",
    "UsbConfiguration",
    "UsbDevice",
    "UsbAlternateInterface",
    "UsbEndpoint",
    "UsbInterface",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "UsbControlTransferParameters",
    "UsbRequestType",
    "UsbDirection",
    "UsbEndpointType",
    "UsbRecipient",
    "UsbTransferStatus",
    "Navigator",
    "Window",
] }
