[package]
name = "smoo-test-harness"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"
repository = { workspace = true }
description = "Integration test harness for smoo (dummy_hcd loopback)"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true, features = ["alloc"] }
libc = { workspace = true }
nix = { version = "0.30", features = ["mount", "signal", "fs"] }
regex = "1.11"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
smoo-host-blocksources = { workspace = true }
smoo-host-core = { workspace = true }
smoo-proto = { workspace = true }
tempfile = "3.13"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "signal", "time", "sync"] }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
