[package]
name = "blocksourced-ublk"
version = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
license = "GPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
libc = "0.2.177"
smoo-host-core = { path = "../../crates/smoo-host-core" }
smoo-host-blocksources = { path = "../../crates/smoo-host-blocksources" }
smoo-gadget-ublk = { path = "../../crates/smoo-gadget-ublk" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ctrlc = "3.4.5"
